<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backg">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:gravity="center"
        android:layout_alignParentTop="true"
        android:layout_above="@id/input_group"
        android:paddingBottom="20dp">

        <ImageView
            android:layout_width="150dp"
            android:layout_height="153dp"
            android:layout_marginLeft="90dp"
            android:layout_gravity="center_vertical"
            android:background="@drawable/head"
            android:padding="10dp"
            android:textColor="@color/white_greyish"
            android:textSize="25sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-black"
            android:text="@string/login"
            android:textColor="#9BFF25"
            android:textSize="50dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="cursive"
            android:text="To Get Protected..!"
            android:textColor="#FFFFFF"
            android:textSize="20sp"/>

    </LinearLayout>


    <LinearLayout
        android:id="@+id/input_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:layout_marginBottom="20dp"
        android:layout_alignParentBottom="true"
        android:gravity="center">


        <EditText
            android:id="@+id/Email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:drawableLeft="@drawable/avatar"
            android:drawablePadding="8dp"
            android:gravity="center_vertical"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="16sp"
            android:hint="Email"
            android:inputType="textEmailAddress"
            android:padding="15dp" />/>

        <View
            android:layout_width="fill_parent"
            android:layout_height="1px"
            android:background="@color/white" />

        <EditText
            android:id="@+id/mPass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:drawableLeft="@drawable/password"
            android:drawablePadding="8dp"
            android:gravity="center_vertical"
            android:hint="@string/passowrd"
            android:inputType="textPassword"
            android:padding="10dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="16sp"
            android:layout_marginLeft="5dp"/>

        <View
            android:layout_width="fill_parent"
            android:layout_height="1px"
            android:background="@color/white" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="5dp"
            android:paddingTop="8dp" >

            <CheckBox
                android:id="@+id/show_hide_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/show_pwd"
                android:textColor="@color/white"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/forgot_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="end"
                android:padding="5dp"
                android:text="@string/forgot"
                android:textColor="#FFE800"
                android:textSize="14sp"
                android:textStyle="bold"/>
        </LinearLayout>


        <Button
            android:id="@+id/mLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/button"
            android:foreground="?android:attr/selectableItemBackground"
            android:text="@string/login"
            android:textAllCaps="false"
            android:textColor="#FF0063"
            android:textSize="20sp"/>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:paddingBottom="5dp"
        android:paddingTop="8dp" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:padding="10dp"
            android:text="@string/already_user"
            android:textSize="20dp"
            android:textStyle="bold"
            android:textColor="#FFFFFF"
            android:fontFamily="cursive"/>
        <TextView
            android:id="@+id/signUp_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:padding="10dp"
            android:text="Sign Up"
            android:textAllCaps="true"
            android:textSize="20dp"
            android:textStyle="bold"
            android:textColor="#FAE105"
            android:fontFamily="sans-serif-condensed"/>
    </LinearLayout>

        <ProgressBar
            android:id="@+id/progressbar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="invisible"
            android:layout_marginBottom="60dp"/>


    </LinearLayout>

</RelativeLayout>



<!--<LinearLayout-->
<!--android:id="@+id/login_layout"-->
<!--android:layout_width="fill_parent"-->
<!--android:layout_height="wrap_content"-->
<!--android:layout_centerInParent="true"-->
<!--android:orientation="vertical" >-->

<!--<ImageView-->
<!--    android:layout_width="150dp"-->
<!--    android:layout_height="153dp"-->
<!--    android:layout_marginLeft="90dp"-->
<!--    android:layout_gravity="center_vertical"-->
<!--    android:background="@drawable/head"-->
<!--    android:padding="10dp"-->
<!--    android:textColor="@color/white_greyish"-->
<!--    android:textSize="25sp"-->
<!--    android:textStyle="bold" />-->

<!--<EditText-->
<!--    android:id="@+id/login_emailid"-->
<!--    android:singleLine="true"-->
<!--    android:layout_width="fill_parent"-->
<!--    android:layout_height="wrap_content"-->
<!--    android:layout_marginTop="20dp"-->
<!--    android:background="@android:color/transparent"-->
<!--    android:drawableLeft="@drawable/email"-->
<!--    android:drawablePadding="8dp"-->
<!--    android:gravity="center_vertical"-->
<!--    android:hint="@string/email"-->
<!--    android:inputType="textEmailAddress"-->
<!--    android:padding="10dp"-->
<!--    android:textColor="@color/white"-->
<!--    android:textColorHint="@color/white"-->
<!--    android:textSize="16sp" />-->

<!--<View-->
<!--    android:layout_width="fill_parent"-->
<!--    android:layout_height="1px"-->
<!--    android:background="@color/white_greyish" />-->

<!--<EditText-->
<!--    android:id="@+id/login_password"-->
<!--    android:singleLine="true"-->
<!--    android:layout_width="fill_parent"-->
<!--    android:layout_height="wrap_content"-->
<!--    android:background="@android:color/transparent"-->
<!--    android:drawableLeft="@drawable/password"-->
<!--    android:drawablePadding="8dp"-->
<!--    android:gravity="center_vertical"-->
<!--    android:hint="@string/passowrd"-->
<!--    android:inputType="textPassword"-->
<!--    android:padding="10dp"-->
<!--    android:textColor="@color/white"-->
<!--    android:textColorHint="@color/white"-->
<!--    android:textSize="16sp" />-->

<!--<LinearLayout-->
<!--    android:layout_width="fill_parent"-->
<!--    android:layout_height="wrap_content"-->
<!--    android:orientation="horizontal"-->
<!--    android:paddingBottom="5dp"-->
<!--    android:paddingTop="8dp" >-->

<!--    <CheckBox-->
<!--        android:id="@+id/show_hide_password"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_weight="1"-->
<!--        android:text="@string/show_pwd"-->
<!--        android:textColor="@color/white"-->
<!--        android:textSize="14sp" />-->

<!--    <TextView-->
<!--        android:id="@+id/forgot_password"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_weight="1"-->
<!--        android:gravity="end"-->
<!--        android:padding="5dp"-->
<!--        android:text="@string/forgot"-->
<!--        android:textColor="@color/white"-->
<!--        android:textSize="14sp" />-->
<!--</LinearLayout>-->

<!--<Button-->
<!--    android:id="@+id/loginBtn"-->
<!--    android:layout_width="fill_parent"-->
<!--    android:layout_height="wrap_content"-->
<!--    android:layout_marginTop="3dp"-->
<!--    android:background="@drawable/loginbutton_selector"-->
<!--    android:alpha="0.8"-->
<!--    android:padding="5dp"-->
<!--    android:text="@string/login"-->
<!--    android:textColor="#009688"-->
<!--    android:textSize="30sp"-->
<!--    android:textStyle="bold" />-->
<!--</LinearLayout>-->

<!--<TextView-->
<!--android:layout_width="wrap_content"-->
<!--android:layout_height="wrap_content"-->
<!--android:layout_below="@+id/login_layout"-->
<!--android:layout_centerHorizontal="true"-->
<!--android:layout_marginTop="40dp"-->
<!--android:gravity="center"-->
<!--android:padding="10dp"-->
<!--android:text="@string/newUser"-->
<!--android:textColor="@color/white"-->
<!--android:textSize="15sp" />-->

<!--<TextView-->
<!--android:id="@+id/createAccount"-->
<!--android:layout_width="wrap_content"-->
<!--android:layout_height="wrap_content"-->
<!--android:layout_below="@+id/login_layout"-->
<!--android:layout_centerHorizontal="true"-->
<!--android:layout_marginTop="65dp"-->
<!--android:gravity="center"-->
<!--android:padding="5dp"-->
<!--android:text="Sign Up here!"-->
<!--android:textColor="@color/yellow"-->
<!--android:textSize="20sp"-->
<!--tools:ignore="DuplicateIds" />-->